--- a/Front-End/src/views/Inventory/Inventory.css
+++ b/Front-End/src/views/Inventory/Inventory.css
@@ -106,7 +106,7 @@ th.chkbox {
 }
 
 .detail{
-    width: 180px;
+    width: 150px;
     margin-left: 10px;
 }
 
@@ -154,7 +154,7 @@ th.chkbox {
 }
 
 .price {
-    width: 130px;
+    width: 110px;
     text-align: left;
 }
 
@@ -212,12 +212,16 @@ td.productImage {
 }
 
 .printIcon {
-    width: 31px;
-    height: 31px;
+    width: 20px;
+    height: 20px;
     object-fit: contain;
     float: right;
-    margin-right: 50px;
+    margin-right: 12px;
     cursor: pointer;
+    margin-top: 0;
+    margin-bottom: 0;
+    position: relative;
+    top: 0;
 }
 
 .blackBg{
@@ -260,6 +264,25 @@ td.productImage {
 .tableSeeUsers .tableHeader {
     height: 58px;
     padding: 18px 8px 0 18px;
+}
+
+.warningWindow{
+    display: none;
+    position: fixed;
+    width: 441px;
+    margin: auto;
+    z-index: 4;
+    top: 210px;
+    left: 462px;
+}
+
+.warningWindow .tableHeader {
+    height: 58px;
+    padding: 18px 8px 0 18px;
+}
+
+.warningWindow .tableBody {
+    height: 100px;
 }
 
 .confirmationBtn{
@@ -369,4 +392,13 @@ input[type="date"]:not(.has-value):before{
 .searchIcon {
     position: relative;
     z-index: 2;
+}
+
+.inputFile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
 }
